Reduced to changing the carousel height to fixed even though it created some text overlap

--- a/public/stylesheets/carousel.less
+++ b/public/stylesheets/carousel.less
@@ -11,7 +11,7 @@
     //top: 0;
     //left: 0;
     min-width: 100%;
-    min-height: 100vh;
+    height: 100vh;
     
     position: relative;
     //background-size: cover;
